# staxchallenge

./: .gitignore  CMakeLists.txt  README.md
include/: DoublyLinkedList.h  DoublyLinkedList.tpp  Node.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  DoublyLinkedListTest.cpp  NodeTest.cpp
